# fastapi-todo

./: .gitignore  README.md  config.example.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 4ae816688f78_sync_db_with_model.py  6104bacf3164_create_users_table.py  73bf43c545b8_create_tasks_table.py  bae142034d6b_add_task_tag_link_table.py
app/: db.py  main.py
app/internal/: db.py  security.py  settings.py  validators.py
app/internal/core/: db.py  security.py  validators.py
app/internal/models/: __init__.py  tag.py  task.py  task_tag_link.py  user.py
app/models/: jwt.py  task.py  user.py
app/routers/: auth.py  tags.py  tasks.py
